# life-saver-mcp

./: .gitignore  README.md  life-saver-mcp.json  pyproject.toml
src/life_saver_mcp/: config.py  models.py  server.py
src/life_saver_mcp/analysis/: image_utils.py  prompts.py  scenario.py
src/life_saver_mcp/handlers/: __init__.py  base.py  generic.py  lanhu.py  lanhu_annotations.py  lanhu_axure.py  lanhu_slices.py  router.py  zentao.py
src/life_saver_mcp/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
tests/: test_all.py  test_lanhu.py
