[project]
name = "life-saver-mcp"
version = "0.1.0"
description = "Image recognition & URL content analysis MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.0",
    "click>=8.0",
    "uvicorn>=0.30",
    "anyio>=4.0",
    "httpx>=0.27",
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "playwright>=1.40",
    "lxml>=5.0",
]

[project.scripts]
life-saver-mcp = "life_saver_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/life_saver_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/life_saver_mcp"]
